--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -503,7 +503,7 @@
                                                 </div>
                                             </fieldset>
                                             <fieldset class="col-sm-12">
-                                                <label>Email address</label>
+                                                <label>Email address *</label>
                                                 <input class="form-control form-required" id="id_email"
                                                        value="{{ profile_user.email }}" name="email">
                                             </fieldset>
