[#839] make popup window wider

--- a/hs_collection_resource/templates/pages/collectionresource.html
+++ b/hs_collection_resource/templates/pages/collectionresource.html
@@ -118,7 +118,7 @@
 
     {#    modal div: collection candidate table #}
     <div class="modal fade" id="collection-candidate" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog" style="width:65%">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
