Added descriptive texts.

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -749,6 +749,16 @@
                                         <a id="add-source" class="btn btn-success" data-toggle="modal"
                                            data-target="#add-source-dialog"><i
                                                 class="fa fa-plus"></i> Add source</a>
+                                        <div>
+                                            <small class="text-muted">If this resource was derived from another
+                                                resource, click the button above to create a link to the source resource
+                                                from which this resource was derived. If the source resource is a
+                                                HydroShare resource, you should paste in the URL to the source resource
+                                                in HydroShare. If the source resource is something outside of
+                                                HydroShare, you can paste in a URL or a full text citation to the
+                                                external resource.
+                                            </small>
+                                        </div>
                                     </div>
                                     <hr style="border: 0;">
                                     <div>
