--- a/theme/templates/resource-landing-page/citation.html
+++ b/theme/templates/resource-landing-page/citation.html
@@ -215,6 +215,12 @@
                     <span class="glyphicon glyphicon-lock"><span
                             class="button-label"> Manage access</span></span>
             </a>
+            <div>
+                <small class="text-muted">Use this button to share your resource with specific HydroShare users. You can give other users
+                    the ability to view or edit this resource. You can also add additional owners who will have full
+                    permissions.
+                </small>
+            </div>
             {#======= Manage access modal window begins =======#}
             <div class="modal fade" id="manage-access">
                 <div class="modal-dialog">
