HIS filter fix.

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -91,7 +91,7 @@
                                                     <option value="generic">Generic</option>
                                                     <option value="geographic feature">Geographic Feature (ESRI Shapefiles)</option>
                                                     <option value="geographic raster">Geographic Raster</option>
-                                                    <option value="web app resource">HIS Referenced Time Series</option>
+                                                    <option value="his referenced time series">HIS Referenced Time Series</option>
                                                     <option value="model instance resource">Model Instance</option>
                                                     <option value="model program">Model Program</option>
                                                     <option value="multidimensional">Multidimensional (NetCDF)</option>
