--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -63,7 +63,7 @@
                     <option value="TimeSeriesResource">Time Series</option>
                 </optgroup>
 
-                <optgroup label="Model resources">
+                <optgroup label="Model Resources">
                     <option value="ModelProgramResource">Model Program</option>
                     <option value="ModelInstanceResource">Model Instance</option>
                     <option value="SWATModelInstanceResource">SWAT Model Instance</option>
