--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -50,23 +50,23 @@
             <select class="form-control" name="resource-type" id="resource-type">
                 <option value="GenericResource">Generic</option>
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
-                <option value="ScriptResource">Script</option>
                 <option value="ToolResource">Web App</option>
 
                 <optgroup label="Geographic Resources">
-                    <option value="GeographicFeatureResource">Geographic Feature (ESRI Shapefiles)</option>
                     <option value="RasterResource">Geographic Raster</option>
+                    <option value="GeographicFeatureResource">Geographic Feature (ESRI Shapefiles)</option>
                 </optgroup>
 
                 <optgroup label="Time Series Resources">
-                    <option value="RefTimeSeriesResource">HIS Referenced Time Series</option>
                     <option value="TimeSeriesResource">Time Series</option>
+                    <option value="RefTimeSeriesResource">HIS Referenced Time Series</option>
                 </optgroup>
 
-                <optgroup label="Model Resources">
+                <optgroup label="Modeling">
                     <option value="ModelProgramResource">Model Program</option>
                     <option value="ModelInstanceResource">Model Instance</option>
                     <option value="SWATModelInstanceResource">SWAT Model Instance</option>
+                    <option value="ScriptResource">Script</option>
                 </optgroup>
 
                 {#                <option value="InstResource">RHESSys Instance Resource</option> #}
