changed default order to modified (desc)

--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -449,7 +449,7 @@
         ==================================================*/
 
             resourceTable = $("#item-selectors").DataTable({
-                "order": [[4, "asc"]],
+                "order": [[4, "desc"]],
                 "paging": false,
                 "info": false,
                 "columnDefs": [
