--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -151,7 +151,7 @@
                                 {# Username #}
                                 <fieldset class="col-sm-4">
                                     <label>Username *</label>
-                                    <input class="form-control form-required" value="{{ profile_user.username }}" name="username">
+                                    <input id="id_username" class="form-control form-required" value="{{ profile_user.username }}" name="username">
                                     <small class="text-muted">Only letters, numbers, dashes or underscores.</small>
                                 </fieldset>
                             </div>
@@ -775,8 +775,26 @@
             var flagRequiredElements = validateRequiredElements();
             var flagPasswords = validatePasswords();
             var flagEmail = validateEmail();
+            var flagUsername = validateUserName();
 
-            return  flagRequiredElements && flagPasswords && flagEmail;
+            return  flagRequiredElements && flagPasswords && flagEmail && flagUsername;
+        }
+
+        // Only letters, numbers and dashes or underscore.
+        function validateUserName() {
+            var regex = /^[a-zA-Z0-9-_]+$/;
+            var username = $("#id_username");
+
+            if (!username.val()) {
+                return false;
+            }
+
+            if (!regex.test(username.val())) {
+                username.parent().find(".error-label").remove();
+                username.parent().append(errorLabel("Not a valid username."));
+                return false;
+            }
+            return true;
         }
 
         function validateRequiredElements() {
@@ -853,7 +871,7 @@
 
             $(".form-required").change(onFormRequiredChange);
             $("#id_email").change(validateEmail);
-
+            $("#id_username").change(validateUserName);
         }
 
         function setViewMode() {
@@ -885,8 +903,9 @@
 
         $(document).ready(function () {
             // Change country first empty option to 'Unspecified'
-            $("select[name='country'] option:first-child").val("Unspecified");
-            $("select[name='country'] option:first-child").text("Unspecified");
+            var option = $("select[name='country'] option:first-child");
+            option.val("Unspecified");
+            option.text("Unspecified");
 
             // File name preview for Add CV
             $('.btn-primary.btn-file :file').on('fileselect', function (event, numFiles, label) {
@@ -899,16 +918,18 @@
             });
 
             $("#selectUserType").change(function () {
+                 var inputOther = $("#user-type-other input");
                 if ($(this).val() == "Other") {
                     $("#user-type-other").show();
                     $("#selectUserType").removeAttr("name");
-                    $("#user-type-other input").attr("name", "user_type");
-                    $("#user-type-other input").addClass("form-required");
+                    inputOther.attr("name", "user_type");
+                    inputOther.addClass("form-required");
+                    inputOther.change(onFormRequiredChange);
                 }
                 else {
                     $("#user-type-other").hide();
-                    $("#user-type-other input").removeAttr("name");
-                    $("#user-type-other input").removeClass("form-required");
+                    inputOther.removeAttr("name");
+                    inputOther.removeClass("form-required");
                     $("#selectUserType").attr("name", "user_type");
                 }
             });
