--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -52,6 +52,7 @@
                 <option value="ModelProgramResource">Model Program</option>
                 <option value="ModelInstanceResource">Model Instance</option>
                 <option value="SWATModelInstanceResource">SWAT Model Instance</option>
+                <option value="MODFLOWModelInstanceResource">MODFLOW Model Instance</option>
                 <option value="NetcdfResource">Multidimensional (NetCDF)</option>
                 <option value="TimeSeriesResource">Time Series</option>
                 <option value="RefTimeSeriesResource">HIS Referenced Time Series</option>
